# webros-mvp

./: .gitignore
backend/src/lesson_11_interfaces/: CMakeLists.txt  package.xml
backend/src/lesson_11_interfaces/msg/: ObjectArray.msg  ObjectData.msg
backend/src/waterstrider_interfaces/: CMakeLists.txt  package.xml
backend/src/waterstrider_interfaces/msg/: WsPoint.msg  WsPose.msg  WsTheta.msg
backend/src/web_bringup/: CMakeLists.txt  package.xml
backend/src/web_bringup/launch/: rosbridge.launch.py
backend/src/web_bringup/scripts/: start_rosbridge.sh
frontend/: README.md  app.py  bag_api.py  bag_database.py  bag_manager.py  bag_parser.py
frontend/static/css/: bag.css  buttons.css  compass.css  main.css  position.css  side-menu.css  swipe.css
frontend/static/js/: bagCatalog.js  bagManager.js  bagPlayer.js  bagTimeline.js  bagViewer.js  buttons.js  compass.js  joyController.js  keyboardController.js  main.js  pingMonitor.js  position.js  rosImageReader.js  rosJs.js  side-menu.js  swipe.js  videoReader.js
frontend/templates/: index.html
